fix layout bug

--- a/src/components/HomeComponents/ShowProducts/ProductMain/product_main.module.css
+++ b/src/components/HomeComponents/ShowProducts/ProductMain/product_main.module.css
@@ -12,3 +12,9 @@
   grid-template-columns: repeat(auto-fit, minmax(213px, 1fr));
   gap: 1rem;
 }
+
+@media (max-width: 480px) {
+  .products_container {
+    place-items: center;
+  }
+}
